--- a/render-process/index.css
+++ b/render-process/index.css
@@ -2,3 +2,19 @@ body {
   background-color: #242424;
   padding: 0px;
 }
+
+::-webkit-scrollbar
+{
+    background-color: #a0a0a0;
+}
+
+::-webkit-scrollbar-track
+{
+    background-color:#1d1d1d;
+}
+
+::-webkit-scrollbar-thumb
+{
+    height:50px;
+    background-color:#818181;
+}
