--- a/render-process/Editor/Editor.css
+++ b/render-process/Editor/Editor.css
@@ -1,20 +1,27 @@
-.body {
+.editor {
   width   : 100%;
-  height  : 100%;
-  position: fixed;
-}
-
-.sider {
   height  : 100%;
   overflow: hidden;
 }
 
-.sider:hover {
-  overflow-y   : auto;
-}
-
-.content {
-  width  : 100%;
+.editorBd {
   height : 100%;
   display: flex;
+  background: #fafafa;
+}
+
+.editorSidebar,
+.editorContent {
+  min-width: 500px;
+  height   : 100%;
+}
+
+.editorSidebar {
+  background: #fafafa;
+  overflow-y: auto;
+}
+
+.mind {
+  width           : 100%;
+  height          : 800px;
 }
