--- a/render-process/index.css
+++ b/render-process/index.css
@@ -1,20 +1,40 @@
 body {
   background-color: #242424;
-  padding: 0px;
+  padding         : 0px;
 }
 
-::-webkit-scrollbar
-{
-    background-color: #a0a0a0;
+.body {
+  width   : 100%;
+  height  : 100%;
+  position: fixed;
 }
 
-::-webkit-scrollbar-track
-{
-    background-color:#1d1d1d;
+.sider {
+  height  : 100%;
+  overflow: hidden;
 }
 
-::-webkit-scrollbar-thumb
-{
-    height:50px;
-    background-color:#818181;
+.sider:hover {
+  overflow-y   : auto;
+}
+
+.content {
+  width  : 100%;
+  height : 100%;
+  display: flex;
+  background-color: #242424;
+}
+
+.tabs {
+  width: 100%;
+  padding: 0;
+}
+
+::-webkit-scrollbar {
+  background-color: rgb(20, 20, 20);
+}
+
+::-webkit-scrollbar-thumb {
+  height          : 50px;
+  background-color: #818181;
 }
