--- a/render-process/Editor/Editor.css
+++ b/render-process/Editor/Editor.css
@@ -5,19 +5,20 @@
 }
 
 .editorBd {
+  width: 100%;
   height : 100%;
   display: flex;
-  background: #fafafa;
+
 }
 
-.editorSidebar,
 .editorContent {
-  min-width: 500px;
+  /* min-width: 500px; */
   height   : 100%;
 }
 
 .editorSidebar {
-  background: #fafafa;
+  /* min-width: 500px; */
+  height   : 100%;
   overflow-y: auto;
 }
 
