--- a/render-process/index.css
+++ b/render-process/index.css
@@ -42,10 +42,26 @@ body {
   background-color: #818181;
 }
 
-.site-tree-search-value {
-    color: #f50;
-}
 
 [data-theme="dark"] .site-tree-search-value {
     color: #d84a1b;
   }
+
+
+.explorer-node {
+    margin: 0;
+    padding: 0;
+    line-height: 20px;
+    white-space: nowrap;
+    list-style: none;
+    outline: 0;
+    color: #ffffff;
+}
+
+.explorer-node-title {
+    color: #ffffff;
+}
+
+.explorer-node-search-value {
+    color: #f50;
+}
