--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,16 @@
   --b3-color-border: #30363d;
 }
 
+::-webkit-scrollbar {
+  width: 9px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #30363d;
+  border-radius: 9px;
+  -webkit-box-shadow: inset006pxrgba(0, 0, 0, 0.5);
+}
+
 body {
   margin: 0;
 }
