--- a/src/index.scss
+++ b/src/index.scss
@@ -200,4 +200,6 @@ code {
   margin: 0 3px;
   white-space: break-spaces;
   box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
+    Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
