--- a/src/index.scss
+++ b/src/index.scss
@@ -196,9 +196,9 @@ body {
 code {
   background-color: #6e768166;
   border-radius: 6px;
-  padding: 3px 6px;
-  margin: 0 3px;
+  padding: 0.15em 0.3em;
   white-space: break-spaces;
+  line-height: 1.8;
   box-sizing: border-box;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
     Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
