search node def in title bar

--- a/src/index.scss
+++ b/src/index.scss
@@ -107,8 +107,12 @@ body {
   width: 12px !important;
 }
 
+.b3-inspector-content {
+  padding: 20px;
+}
+
 .b3-inspector .ant-form-item {
-  margin-bottom: 16px;
+  margin-bottom: 10px;
 }
 
 .b3-inspector .ant-form-item-label {
