set bold to code of markdown

--- a/src/index.scss
+++ b/src/index.scss
@@ -202,6 +202,7 @@ code {
   border-radius: 6px;
   padding: 0.15em 0.3em;
   white-space: break-spaces;
+  font-weight: 600;
   line-height: 1.8;
   box-sizing: border-box;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
