edit variable definition

--- a/src/index.scss
+++ b/src/index.scss
@@ -124,6 +124,11 @@ body {
   text-align: end;
 }
 
+.b3-inspector-vars-item .ant-input-group-addon {
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
 :focus {
   outline: none;
 }
