fix editor search focus layout error

--- a/src/index.scss
+++ b/src/index.scss
@@ -124,6 +124,10 @@ body {
   text-align: end;
 }
 
+.b3-inspector .ant-form-item-explain {
+  word-wrap: break-word;
+}
+
 .b3-inspector-vars-item .ant-input-group-addon {
   padding-left: 8px;
   padding-right: 8px;
